crates/strider/tests/snapshots/v3__arm_thumb__complex__dispatch_on_flag.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "11" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "16" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x594:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "20" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "20" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "23" -> "20" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "13" -> "20" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "24" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "20" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v25" [color="#888888", style=dashed];
  "v25" -> "24" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v26" [color="#888888", style=dashed];
  "v26" -> "24" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v27" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v27" [color="#888888", style=dashed];
  "v27" -> "24" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v28" [color="#888888", style=dashed];
  "v28" -> "24" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "23" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "6" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "22" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x10:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "23" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
